fix logout button to destroy session

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,6 +16,7 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
 
+      <p id="validation-message"></p>
       <input type="checkbox" onclick="showPassword()" id="show-password"/>
       <label for="show-password" id="showpass">Show Password</label>
       <div class="form-group">
