--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@
 }
 
 
-#login-button, #signup-button {
+#login-button, #signup-button, .dropdown, .logout-button {
     float: right;
     margin: auto;
     margin-left: 20px;
