--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,13 +5,14 @@
     <form class="form login-form">
       <div class="form-group">
         <p id="username-login1">Username</p>
-        <input class="form-input" type="text" id="username-login" />
+        <input class="form-input" type="text" id="username-login" placeholder="Username"/>
       </div>
       <div class="form-group">
         <p id="password-login1">Password</p>
-        <input class="form-input" type="password" id="password-login"/>
+        <input class="form-input" type="password" id="password-login" placeholder="Password"/>
       </div>
         
+      <p id="validation-message"></p>
       <input type="checkbox" onclick="showPassword()" id="show-password"/>
       <label for="show-password" id="showpass">Show Password</label>
 
