--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,15 +5,15 @@
     <form class="form signup-form">
       <div class="form-group">
         <p id="username-signup1">Username</p>
-        <input class="form-input" type="text" id="username-signup" />
+        <input class="form-input" type="text" id="username-signup" placeholder="Username" />
       </div>
       <div class="form-group">
         <p id="email-signup1">Email</p>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="text" id="email-signup" placeholder="email@example.com" />
       </div>
       <div class="form-group">
         <p id="password-signup1">Password</p>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-signup" placeholder="Password"/>
       </div>
 
       <p id="validation-message"></p>
