--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
     display: block;
     font-family: monospace;
     width: 100%;
-    height: 150px;
+    height: 100px;
     background-image: url('../images/name-tags.jpg');
     background-color: transparent;
     background-repeat: none;
@@ -25,21 +25,37 @@
 }
 
 #web-title {
+    display: block;
+    text-align: center;
     text-decoration: none;
     font-style: none;
-    float: left;
+    margin: 0;
     font-size: 35px;
     color: rgb(24, 160, 65);
 }
 
 
-#login-button, #signup-button, .dropdown, .logout-button {
-    float: right;
+#login-button, #signup-button {
+    display: inline-block;
     margin: auto;
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-bottom: 10px;
     font-size: larger;
     color: rgb(24, 160, 65);
     border-color: rgb(24, 160, 65);
+}
+
+.dropdown1,
+.logout-button1,
+.dropdown2,
+.logout-button2 {
+    display: inline;
+    color: rgb(24, 160, 65);
+    border-color: rgb(24, 160, 65);
+    font-size: 25px;
+    margin: auto;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 #login-style {
@@ -58,6 +74,23 @@
     background-size: cover;
 }
 
+#review-style {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 50%;
+    border-style: double;
+    background-image: url('../images/name-tags.jpg');
+    background-color: transparent;
+    background-repeat: none;
+    background-size: cover;
+    border-color: rgb(24, 160, 65);
+}
+
 #signup-style {
     display: flex;
     justify-content: center;
@@ -74,7 +107,7 @@
     background-size: cover;
 }
 
-.login-card, .login-card1 {
+.login-card, .login-card1, .review-card {
     display: block;
     color: white;
     width: 75%; 
@@ -94,6 +127,7 @@
     padding-bottom: 10px;
 }
 
+
 #showpass {
     padding-top: 20px;
     color: rgb(24, 160, 65);
@@ -105,7 +139,15 @@
     background-color: rgb(0, 0, 0);
 }
 
-#username-login1, #password-login1, #username-signup1, #email-signup1, #password-signup1, #firstName-signup1, #lastName-signup1 {
+#username-login1, 
+#password-login1, 
+#username-signup1, 
+#email-signup1, 
+#password-signup1, 
+#firstName-signup1, 
+#lastName-signup1,
+#review-topic1,
+#review-description1 {
     font-style: monospace;
     font-size: 25px;
     color: rgb(24, 160, 65);
@@ -117,7 +159,17 @@
     color: rgb(24, 160, 65);
 }
 
-#username-login, #password-login, #username-signup, #email-signup, #password-signup, #firstName-signup, #lastName-signup, #profileImage {
+#username-login, 
+#password-login, 
+#username-signup, 
+#email-signup, 
+#password-signup, 
+#firstName-signup, 
+#lastName-signup, 
+#profileImage, 
+#review-topic,
+#review-description
+ {
     width: 75%;
     text-align: center;
     font-style: monospace;
@@ -131,6 +183,13 @@
 #submit-button {
     font-size: 20px;
     background-color: rgb(24, 160, 65);
+    width: 25%;
+    margin-bottom: 15px;
+}
+
+#submit-button1 {
+    font-size: 20px;
+    background-color: rgb(148, 33, 33);
     width: 25%;
     margin-bottom: 15px;
 }
@@ -214,6 +273,19 @@
     max-height: 400px;
 }
 
+#blank-profile3 {
+    display: inline-block;
+    width: 7%;
+    height: 60px;
+    margin: 0;
+    margin-top: 15px;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    border-radius: 50%;
+    max-width: 225px;
+    max-height: 400px;
+}
+
 #blank-profile:hover {
     cursor: pointer;
     border-style: double;
@@ -253,3 +325,118 @@
     font-family: monospace;
 }
 
+#game-title2 {
+    display: block;
+    text-align: center;
+    font-size: 45px;
+    color: rgb(24, 160, 65);
+    background-color:  rgba(16, 28, 82, 0.644);
+    width: 100%;
+    margin: auto;
+    padding:10px;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    font-family: monospace;
+}
+
+#game-title3 {
+    display: block;
+    text-align: center;
+    font-size: 45px;
+    color: rgb(24, 160, 65);
+    background-color:  rgba(0, 0, 0, 0.774);
+    width: 50%;
+    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    background-image: url('../images/name-tags.jpg');
+    background-color: transparent;
+    background-repeat: none;
+    background-size: cover;
+    font-family: monospace;
+}
+
+#game-title4 {
+    display: none;
+    text-align: center;
+    font-size: 45px;
+    color: rgb(24, 160, 65);
+    background-color:  rgba(0, 0, 0, 0.774);
+    width: 50%;
+    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    background-image: url('../images/name-tags.jpg');
+    background-color: transparent;
+    background-repeat: none;
+    background-size: cover;
+    font-family: monospace;
+}
+
+#review-title {
+   font-size: 25px;
+   color: rgb(24, 160, 65);
+}
+#review-title5 {
+    font-size: 20px;
+    color: rgb(24, 160, 65);
+   
+ }
+
+#game-title5{
+    display: block;
+    text-align: left;
+    font-size: 45px;
+    color: rgb(24, 160, 65);
+    width: 100%;
+    margin: auto;
+    margin-top: 20px;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    background-repeat: none;
+    background-size: cover;
+    font-family: monospace;
+}
+
+#topic-display {
+    margin-top: 15px;
+    margin-left: 15px;
+    font-size: 20px;
+}
+
+#description-display {
+    margin-left: 15px;
+}
+
+#review-description {
+    height: 150px;
+    resize: none;
+}
+
+.go-top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(24, 160, 65);
+    font-weight: bold;
+    padding: 10px;
+    background-color: #f1f1f1;
+    border-style: double;
+    border-color: rgb(24, 160, 65);
+    border-radius: 4px;
+  }
+
+  #logo-image {
+    width: 50%;
+  }
+
+  #intro-section {
+    font-size: 15px;
+  }
