--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,32 +1,46 @@
 <header class="statcard statcard-success p-4 mb-4" id="header-title">
-  <nav>
-    <a class="statcard-desc" href="/" id="web-title">Software Engineer Blogspot</a>
-    <div class="navigation-bar">
-      <form class="form-inline my-2 my-lg-4">
-        {{#if loggedIn}}
-        <div class="dropdown">
-          <a class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
-        </div>
-        <div class="dropdown">
-          <a class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</a>
-        </div>
-         <div class="dropdown">
-          <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
-        </div>
-        <div class="dropdown">
-          <a href="/home" class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Feed</a>
-        </div>
-        {{else}}
-        <a href="/login" class="btn btn-outline-info mr-sm-2" type="button" id="login-button">Login</a>
-        {{/if}}
+    <a class="statcard-desc" id="web-title">Software Engineer Blogspot</a>
+  </header>
 
         {{#if loggedIn}}
-
+       <div id="game-title3">
+        <div id="game-title1" aria-disabled="true" disabled>
+          <div class="dropdown1">
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
+          </div>
+          <div class="dropdown1">
+            <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
+          </div>
+          <div class="dropdown1">
+            <a href="/feed" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Feed</a>
+          </div>
+        </div>
+      </div>
         {{else}}
-        <a href="/signup" class="btn btn-outline-info mr-sm-2" type="button" id="signup-button">Sign Up</a>
+        
+        <div id="game-title3">
+          <div id="game-title1" aria-disabled="true" disabled>
+            <img src="./images/software-engineer-logo.png" id="logo-image"/>
+             <div id="game-title3">
+                <div id="game-title1" aria-disabled="true" disabled>
+                  <p id="intro-section">Welcome to Software Engineer Blogspot! This app is designed specifically for software engineers and coding enthusiasts like you. Whether you're seeking answers to technical questions, looking for coding tips and tricks, or simply interested in staying up-to-date with the latest industry trends, our platform is the perfect place for you. Join our growing community of passionate developers, share your knowledge, collaborate with others, and expand your network.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div id="game-title3">
+          <div id="game-title1" aria-disabled="true" disabled>
+            <div class="dropdown1">
+              <a href="/login" class="btn btn-outline-info mr-sm-2" type="button" id="login-button">Login</a>
+            </div>
+            <div class="dropdown1">
+              <a href="/signup" class="btn btn-outline-info mr-sm-2" type="button" id="signup-button">Sign Up</a>
+            </div>
+          </div>
+        </div>
         {{/if}}
-      </form>
-    </div>
-  </nav>
-</header>
+
+
+
 
