--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,24 +1,9 @@
 <header class="statcard statcard-success p-4 mb-4" id="header-title">
   <nav>
     <a class="statcard-desc" href="/" id="web-title">Software Engineer Blogspot</a>
-    <div class="navigation-bar">
-    <form class="form-inline my-2 my-lg-4"></form>
-        <div class="dropdown">
-          <a class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
-        </div>
-        <div class="dropdown">
-          <a class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</a>
-        </div>
-         <div class="dropdown">
-          <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
-        </div>
-        <div class="dropdown">
-          <a href="/home" class="btn btn-outline-info mr-sm-2 logout-button" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Feed</a>
-        </div>
-    </form>
     </nav>
 </header>
-   <div>
+   
   <ul class="userList">
     <div id="game-title">
         <a id="game-title1" aria-disabled="true" disabled>{{user.firstName}} {{user.lastName}}</a>
@@ -48,7 +33,70 @@
         </p>   
       </li>
     </div>
-  </ul>
-</div>
+
+    <!-- Section for navigation buttons -->
+    <div id="game-title3">
+        <div id="game-title1" aria-disabled="true" disabled>
+          <div class="dropdown1">
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
+          </div>
+          <div class="dropdown1">
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Create Post</a>
+          </div>
+          <div class="dropdown1">
+            <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
+          </div>
+          <div class="dropdown1">
+            <a href="/feed" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Feed</a>
+          </div>
+        </div>
+    </div>
+
+    <!-- Section for writing a review or post -->
+     <div id="game-title4">
+        <a id="game-title1" aria-disabled="true" disabled>
+          <h2 class="page-title">Create A Post</h2>
+          <hr>
+          <form class="form review-form">
+            <div class="form-group2">
+              <p id="review-topic1">Topic</p>
+              <input type="text" id="review-topic" placeholder="Title"/>
+            </div>
+            
+            <div class="form-group2">
+              <p id="review-description1">Description</p>
+              <textarea rows="5" cols="33" type="text" id="review-description" placeholder="What is on your mind?"></textarea>
+            </div>
+              
+              <hr>
+            <p id="validation-message"></p>
+            <div class="form-group2">
+              <button class="btn btn-primary" type="submit" id="submit-button">Post</button>
+              <button class="btn btn-primary" type="submit" id="submit-button1">Cancel</button>
+            </div>
+            
+          </form>
+        </a>
+    </div>
+
+    <!-- Sections to display reviews -->
+{{#if userReviewData.length}}
+  {{#each userReviewData}}
+    <div class="card" id="game-title">
+      <img src="/images/{{../user.profileImage}}" id="blank-profile3" />
+      <p id="review-title5">{{../user.username}}</p>
+      <div class="card" id="game-title5">
+        <h3 id="topic-display">{{ topic }}<span style="float: right;">{{createdAt}}</span></h3>
+        <hr>
+        <h3 id="description-display">{{ description }}</h3>
+      </div>
+    </div>
+  {{/each}}
+  <a href="#top" class="go-top-button">Go Back to the Top</a>
+{{else}}
+ <div class="card" id="game-title">
+  <p>Create Your First Post!</p>
+ </div>
+{{/if}}
 
 <script type="text/javascript" src="./js/profile.js"></script>
