--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -27,7 +27,9 @@
         <img src="/images/{{user.profileImage}}" id="blank-profile3" />
         <p id="review-title5">{{user.username}}</p>
       <div class="card" id="game-title5">
-        <h3 id="topic-display">{{topic}}<span style="float: right;">{{createdAt}}</span></h3>
+        <h3 id="topic-display">{{topic}}<span style="float: right; margin-right: 10px;">{{createdAt}}</span></h3>
+        <hr>
+        <img src="/reviewImages/{{this.postImage}}" id="review-image"/>
         <hr>
         <h3 id="description-display">{{description}}</h3>
       </div>
