--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,34 +20,40 @@
         <div class="overlay-message">
         Upload New Photo
         </div>
-  </div>
-</form>
-      <li id="card-tile">
-        <p id="card-tile1">
-          {{#if user.username}}
+      </div>
+    </form>
+    </div>
+    <div id="game-title6" style="display:none;">
+        <div id="game-title1" aria-disabled="true" disabled>
+            <p id="card-tile1">
+            {{#if user.username}}
             <p id="review-title1">Username:</p>
             <p id="review-title">{{user.username}}</p>
             <p id="review-title1">Email:</p>
             <p id="review-title">{{user.email}}</p>
           {{/if}}
-        </p>   
-      </li>
+          </p>   
+        </div>
     </div>
+     
 
     <!-- Section for navigation buttons -->
     <div id="game-title3">
         <div id="game-title1" aria-disabled="true" disabled>
           <div class="dropdown1">
-            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2"  aria-haspopup="true" aria-expanded="false">Logout</a>
           </div>
           <div class="dropdown1">
-            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Create Post</a>
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu3" aria-haspopup="true" aria-expanded="false">Create Post</a>
           </div>
           <div class="dropdown1">
-            <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
+            <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu4" aria-haspopup="true" aria-expanded="false">User Info</a>
           </div>
           <div class="dropdown1">
-            <a href="/feed" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Feed</a>
+            <a href="/profile" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" aria-haspopup="true" aria-expanded="false">Profile</a>
+          </div>
+          <div class="dropdown1">
+            <a href="/feed" class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" aria-haspopup="true" aria-expanded="false">Feed</a>
           </div>
         </div>
     </div>
@@ -92,14 +98,23 @@
       <form class="delete-review" data-review-id="{{id}}">
           <button type="submit" class="delete-button">Delete Post</button>
       </form>
-      <img src="/images/{{../user.profileImage}}" id="blank-profile3" />
-      <p id="review-title5">{{../user.username}}</p>
+     <img src="/images/{{../user.profileImage}}" id="blank-profile3" />
+      <a style="font-size: 25px;">{{../user.username}}</a>
       <div class="card" id="game-title5">
         <h3 id="topic-display">{{ topic }}<span style="float: right; margin-right: 10px;">{{createdAt}}</span></h3>
         <hr>
-         <img src="/reviewImages/{{postImage}}" id="review-image" />
+         <img src="/reviewImages/{{ postImage }}" id="review-image" />
         <hr>
-        <h3 id="description-display">{{ description }}</h3>
+        <form class="delete-review1" >
+          <a type="submit" class="delete-button3">Write a Comment</a>
+          <a href="/comments/{{this.id}}" type="button" class="delete-button2">View Comments</a>
+        </form>
+        <h3 id="description-display"><span style="font-style: italic; margin-right: 15px; color:rgb(6, 9, 109); font-weight: bold; ">{{../user.username}}:</span>{{ description }}</h3>
+        <form class="form-group5">
+          <input type="text" class="comment-section1" placeholder="Write a Comment....."/>
+          <input type="hidden" name="reviewId" value="{{this.id}}">
+          <button class="btn btn-primary" type="submit" id="submit-button3">Post</button>
+        </form>
       </div>
     </div>
   {{/each}}
@@ -110,4 +125,4 @@
  </div>
 {{/if}}
 
-<script type="text/javascript" src="./js/profile.js"></script>
+<script type="text/javascript" src="/js/profile.js"></script>
