--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -71,7 +71,7 @@
 
             <div class="form-group">
               <p id="password-signup1">Import Photo</p>
-                <input type="file" id="postImage" name="postImage" onchange="previewImage(event)">
+                <input type="file" id="postImage" name="postImage" onchange="previewImage(event)" placeholder="Only Supports .jpg, .png, .jfif"/>
                 <img id="imagePreview" src="#" alt="Image Preview" style="display: none; max-width: 100%; max-height: 200px;">
             </div>
             
