--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -7,7 +7,7 @@
     <!-- Section for navigation buttons -->
     <div id="game-title3">
         <div id="game-title1" aria-disabled="true" disabled>
-        <a class="statcard-desc" href="/" id="web-title">Community Feed</a>
+        <a class="statcard-desc" id="web-title">Community Feed</a>
           <div class="dropdown2">
             <a class="btn btn-outline-info mr-sm-2 logout-button1" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Logout</a>
           </div>
