--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,11 @@
 </head>
 
 <body class="homepage">
+    <header class="statcard statcard-success p-4 mb-4" id="header-title">
+        <nav>
+            <a class="statcard-desc" id="web-title">Software Engineer Blogspot</a>
+        </nav>
+    </header>
     <main>
     {{{body}}}
     </main>
